# myramadan

./: .env.example  .gitignore  CGU.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.js
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: claude-code-review.yml  claude.yml  release.yml
docs/plans/: 2026-02-27-android-port-design.md  2026-02-27-android-port-implementation.md  2026-02-27-guideme-v2-design.md  2026-02-27-guideme-v2-implementation.md
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: android.json  default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/data/: daily-content.json  duas.json
src/modules/: app-mode.js  app-mode.test.js  bug-report.js  calendar.js  changelog.js  countdown.js  daily-content.js  date-navigation.js  dhikr.js  duas.js  fasting.js  hijri-date.js  journal.js  notifications.js  onboarding.js  platform.js  platform.test.js  practice-tracker.js  practice-tracker.test.js  prayer-times.js  qibla.js  qibla.test.js  sanitize.js  schedule.js  settings.js  settings.test.js  sidebar.js  splash.js  statistics.js  storage.js  support.js  theme.js  updater.js  window.js
src/modules/__mocks__/: storage.js
