[package]
name = "myramadan"
version = "1.2.1"
description = "GuideME - Ramadan Edition"
authors = ["GuideME"]
edition = "2021"

[lib]
name = "myramadan_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tauri-plugin-shell = "2.3.5"
